@@ -1,3 +1,9 @@
+1998-10-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* internal.m (tkobjc_pixmap_create_from_widget): Ignore return
+	values of XChangeWindowAttributes, XMapWindow, XUnmapWindow -- they
+	don't have one.
+
 1998-10-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* Makefile.am (CURRENT): Increment.  Swarm 1.3.1 released.
